2007-09-06  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- Random cleanups; dropdown_menu -> menu, clean up usage of
			nma_menu_clear(), kill nma_dropdown_menu_populate(), fix
			menu destruction to ensure we don't leak widgets

2007-09-06  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h
		- (nm_network_menu_item_init): keep track of the hbox so it can be
			destroyed when necessary
		- (nm_network_menu_item_class_dispose, nm_network_menu_item_class_init):
			dispose of subwidgets as necessary; dispose of hash if needed

2007-09-02  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- Update user settings daemon D-Bus defines now that it's in
			NetworkManager.h
		- s/applet_connection->settings/applet_connection->connection/g since
			that's what it really is
		- Update for change of NMConnection to GObject subclass
		- (read_connection_from_gconf): clear ->id before trying to get the
			value again so that nm_gconf_get_string_helper() doesn't complain

	* src/applet.c
		- Update for change of NMConnection to GObject subclass

	* src/applet-dbus-manager.c
	  src/applet.h
		- Update user settings daemon D-Bus defines now that it's in
			NetworkManager.h

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/vpn-properties/clipboard.c
	  src/vpn-properties/nm-vpn-properties.glade
	  src/vpn-properties/nm-vpn-properties.c
		- Use GtkAssistant instead of GnomeDruid on GTK+ >= 2.10
		    (gnome.org #470554)

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/applet.c
		- (about_dialog_activate_link_cb): don't use gnome_url_open()
		(gnome.org #460671)

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* nm-applet.desktop
		- show in XFCE too (gnome.org #471608)

2007-08-29  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- New D-Bus service name
