@@ -1,3 +1,8 @@
+2007-09-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- Clean up applet widget creation and finalization
+
 2007-09-06  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
